[gd_scene load_steps=8 format=3 uid="uid://bq8x3k2m5n7qa"]

[ext_resource type="Script" uid="uid://cn38tsghdw5sd" path="res://scripts/Menu.gd" id="1_1"]
[ext_resource type="Texture2D" uid="uid://c0qn8jwv7vqoi" path="res://assets/background/Group.png" id="2_5d8b5"]
[ext_resource type="Texture2D" uid="uid://chvik5jf6nqme" path="res://assets/background/icon/ChatGPT Image 16 Ð´ÐµÐº. 2025 Ð³., 18_29_22 1.png" id="3_y56h7"]
[ext_resource type="FontFile" uid="uid://bgwms2w82cyjx" path="res://font/DynaPuff-Bold.ttf" id="4_font"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(1, 0.6, 0.2, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(1, 0.5, 0.1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3"]
bg_color = Color(1, 1, 1, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]

[node name="Background" type="TextureRect" parent="BackgroundLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_5d8b5")
stretch_mode = 5

[node name="LogoLayer" type="CanvasLayer" parent="."]

[node name="Logo" type="TextureRect" parent="LogoLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = -150.0
offset_right = 179.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_y56h7")
stretch_mode = 4

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="CollectEggsLabel" type="Label" parent="UILayer"]
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.45
anchor_bottom = 0.2
offset_left = -125.59999
offset_top = 137.5
offset_right = 49.600006
offset_bottom = 199.5
grow_horizontal = 2
grow_vertical = 2
rotation = -0.43633232
theme_override_colors/font_color = Color(1, 0.9, 0.2, 1)
theme_override_colors/font_outline_color = Color(0.3, 0.3, 0.3, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_font")
theme_override_font_sizes/font_size = 36
text = "Collect 
the eggs"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DontFallLabel" type="Label" parent="UILayer"]
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.2
offset_left = -207.00006
offset_top = 0.49996948
offset_right = -27.000061
offset_bottom = 100.99997
grow_horizontal = 0
grow_vertical = 2
rotation = 0.43633232
theme_override_colors/font_color = Color(1, 0.9, 0.2, 1)
theme_override_colors/font_outline_color = Color(0.3, 0.3, 0.3, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_font")
theme_override_font_sizes/font_size = 36
text = "Don't fall
 for the
 fox"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" type="Button" parent="UILayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = 80.0
offset_right = 120.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_font")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2")
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
text = "PLAY"

[node name="SoundButton" type="Button" parent="UILayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = 70.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")
theme_override_styles/hover = SubResource("StyleBoxFlat_3")
text = "ðŸ”Š"

[node name="MusicButton" type="Button" parent="UILayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -70.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")
theme_override_styles/hover = SubResource("StyleBoxFlat_3")
text = "â™«"
