extends Control

@onready var play_button = $UILayer/PlayButton
@onready var sound_button = $UILayer/SoundButton
@onready var music_button = $UILayer/MusicButton

var sound_enabled: bool = true
var music_enabled: bool = true

func _ready():
	play_button.pressed.connect(_on_play_pressed)
	sound_button.pressed.connect(_on_sound_pressed)
	music_button.pressed.connect(_on_music_pressed)
	
	# –ü—Ä–∏–º–µ–Ω—è–µ–º –Ω–∞–∫–ª–æ–Ω –∫ —Ç–µ–∫—Å—Ç–æ–≤—ã–º –ø–æ–¥—Å–∫–∞–∑–∫–∞–º
	_apply_text_rotation()

func _apply_text_rotation():
	# –ù–∞–∫–ª–æ–Ω —Ç–µ–∫—Å—Ç–∞ "Collect the eggs" (–≤–≤–µ—Ä—Ö –≤–ª–µ–≤–æ)
	var collect_label = $UILayer/CollectEggsLabel
	if collect_label:
		collect_label.rotation_degrees = -15.0
	
	# –ù–∞–∫–ª–æ–Ω —Ç–µ–∫—Å—Ç–∞ "Don't fall for the fox" (–≤–≤–µ—Ä—Ö –≤–ø—Ä–∞–≤–æ)
	var dont_fall_label = $UILayer/DontFallLabel
	if dont_fall_label:
		dont_fall_label.rotation_degrees = 15.0

func _on_play_pressed():
	get_tree().change_scene_to_file("res://scenes/Game.tscn")

func _on_sound_pressed():
	sound_enabled = not sound_enabled
	# TODO: –í–∫–ª—é—á–∏—Ç—å/–≤—ã–∫–ª—é—á–∏—Ç—å –∑–≤—É–∫–æ–≤—ã–µ —ç—Ñ—Ñ–µ–∫—Ç—ã
	if sound_enabled:
		sound_button.text = "üîä"
	else:
		sound_button.text = "üîá"
	print("Sound: ", "ON" if sound_enabled else "OFF")

func _on_music_pressed():
	music_enabled = not music_enabled
	# TODO: –í–∫–ª—é—á–∏—Ç—å/–≤—ã–∫–ª—é—á–∏—Ç—å –º—É–∑—ã–∫—É
	if music_enabled:
		music_button.modulate = Color(1, 1, 1, 1)  # –ü–æ–ª–Ω–∞—è –≤–∏–¥–∏–º–æ—Å—Ç—å
	else:
		music_button.modulate = Color(0.5, 0.5, 0.5, 1)  # –ó–∞—Ç–µ–º–Ω—ë–Ω–Ω–∞—è
	print("Music: ", "ON" if music_enabled else "OFF")
